--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,6 +74,10 @@ dependencies {
     //Retromock
     implementation "co.infinum:retromock:1.1.0"
 
+    //Koin
+    implementation "io.insert-koin:koin-android:3.3.2"
+    implementation "io.insert-koin:koin-androidx-compose:3.4.1"
+
     //Test
     testImplementation 'junit:junit:4.13.2'
     testImplementation "io.mockk:mockk:1.12.2"
@@ -89,4 +93,9 @@ dependencies {
     androidTestImplementation "androidx.test:rules:1.3.0"
     androidTestImplementation "androidx.test:runner:1.3.0"
     androidTestImplementation "androidx.test:core-ktx:1.3.0"
+
+    //Ktor
+    def ktor_version = "2.3.0"
+    implementation("io.ktor:ktor-client-core:$ktor_version")
+    implementation("io.ktor:ktor-client-cio:$ktor_version")
 }
