--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
+        android:name=".ui.App"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:name=".ui.App"
         android:supportsRtl="true"
         android:theme="@style/Theme.ListaFacturasV02"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
             android:name=".ui.view.smartsolar.SmartSolarActivity"
             android:exported="false"
@@ -23,12 +23,15 @@
         <activity
             android:name=".ui.view.listafacturas.ListaFacturasActivity"
             android:exported="false"
-            android:theme="@style/Theme.ListaFacturasV02.NoActionBar"/>
+            android:theme="@style/Theme.ListaFacturasV02.NoActionBar" />
         <activity
-            android:name=".ui.DashBoardActivity"
+            android:name=".ui.view.dashboard.DashBoardActivity"
             android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.ListaFacturasV02.NoActionBar">
+            android:theme="@style/Theme.ListaFacturasV02.NoActionBar" />
+        <activity
+            android:name=".ui.view.login.LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.ListaFacturasV02.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
