25/05/2023 - Implementación sendPasswordResetEmail con firebase en ForgotPasswordActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,10 @@
             android:exported="true"
             android:theme="@style/Theme.ListaFacturasV02.NoActionBar" />
         <activity
+            android:name=".ui.view.login.ForgotPasswordActivity"
+            android:exported="false"
+            android:theme="@style/Theme.ListaFacturasV02.NoActionBar" />
+        <activity
             android:name=".ui.view.login.SignupActivity"
             android:exported="false"
             android:theme="@style/Theme.ListaFacturasV02.NoActionBar" />
